changed primary color to new color in styles.css to fix contrast issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ Primary Color (Green): #357b70
 Secondary Color (Purple): #ae95be;
 */
 :root {
-  --primary-color: #357b70;
+  --primary-color: #00675c;
   --secondary-color: #ae95be;
   --dark-grey: #2b2b2b;
   --visited-link: #05676e;
